kubernetes/monitoring/namespace.yaml
# monitoring namespace.yaml

apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
